<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabFragment1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:text="@string/fnamee"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/cntct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="135dp"
        android:text="@string/contact"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="206dp"
        android:autoLink="email"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance" />


    <TextView
        android:id="@+id/gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="259dp"
        android:autoLink="email"
        android:text="@string/github"
        android:textAppearance="@android:style/TextAppearance.SuggestionHighlight" />

    <TextView
        android:id="@+id/Fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="195dp"
        android:text="@string/facebook"
        android:textAppearance="@android:style/TextAppearance.SuggestionHighlight" />





</RelativeLayout>