<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabFragment3">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/Pname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/project_name1"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/Desc"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:text="@string/description"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/Pname2"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:text="@string/project_name2"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/Desc2"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:text="@string/description2"
        android:textAppearance="@android:style/TextAppearance" />



</RelativeLayout>