<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabFragment2">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/gruad"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="@string/graduation"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/Hschool"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:text="@string/school_name"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/Clgname"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="211dp"
        android:text="@string/college_name"
        android:textAppearance="@android:style/TextAppearance" />


    <TextView
        android:id="@+id/gh"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="229dp"
        android:text="@string/training"
        android:textAppearance="@android:style/TextAppearance.SuggestionHighlight" />



</RelativeLayout>